<resources>
    <string name="app_name">TeesasT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">DashBoard</string>
    <string name="more">More</string>
    <string name="home">Home</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create a new account?</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full name</string>
    <string name="city_nearest_location">City/Nearest Location</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="please_sign_up_to_continue">Please sign up to continue</string>
    <string name="login_image">login image</string>
    <string name="welcome">Welcome</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="hello">Hello,</string>
    <string name="georgina">Georgina!</string>
    <string name="see_all">See all</string>
    <string name="know_more_about_how_we_re_making_an_nimpact_on_the_future_of_learning">Know more about how we\'re making an \nimpact on the future of learning</string>
    <string name="teesas_place">Teesas Place</string>
    <string name="access_to_high_quality_videos">Access to high quality videos</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="bring_your_friends_along_on_this_exciting_nlearning_experience_with_teesas">Bring your friends along on this exciting \nlearning experience with Teesas</string>
</resources>