<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.presentation.SignupFragment">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:id="@+id/fragment_signup"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/login_image"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_weight="0.5"
                    android:src="@drawable/true_friends"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/login" />

                <TextView
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/sign_up"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/login_image"
                    app:layout_constraintTop_toBottomOf="@id/login_image" />

                <TextView
                    android:id="@+id/signup_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/please_sign_up_to_continue"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="@id/signup"
                    app:layout_constraintTop_toBottomOf="@id/signup" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signup_text"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:drawableStart="@drawable/ic_identity"
                    android:drawablePadding="10dp"
                    android:hint="@string/full_name"
                    android:inputType="textAutoComplete"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email"
                    android:importantForAutofill="no" />


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:layout_marginStart="25dp"
                    android:inputType="textPassword|numberPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name" />
                <EditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:drawableStart="@drawable/ic_location"
                    android:drawablePadding="10dp"
                    android:hint="@string/city_nearest_location"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password" />

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="10dp"
                    android:layout_marginStart="25dp"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/location" />



                <androidx.cardview.widget.CardView
                    android:id="@+id/signup_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/custom_ripple"
                    app:cardBackgroundColor="@color/teesGreen"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mobile">

                    <TextView
                        android:id="@+id/signup_button_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/custom_ripple"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:text="@string/sign_up"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ProgressBar
                        android:id="@+id/progress_signIn"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:indeterminateTint="@color/white"
                        android:indeterminateTintMode="src_atop"
                        app:visibility="gone" />

                </androidx.cardview.widget.CardView>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_option"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="Already have an account?"
                    android:textColor="@color/teesGreen"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup_button"
                    app:layout_constraintVertical_bias="1.0" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>