<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.presentation.LoginFragment">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:id="@+id/fragment_login">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/login_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/back_to_school"
                    android:layout_weight="0.5"
                    />

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Welcome,"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintTop_toBottomOf="@id/login_image"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/login_image"
                    android:textSize="40sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Please login to continue"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintTop_toBottomOf="@id/welcome"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/welcome"
                    android:textSize="16sp"
                    android:textStyle="normal"/>
                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/email"
                    android:layout_height="?actionBarSize"
                    android:hint="@string/email"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:drawablePadding="10dp"
                    app:layout_constraintTop_toBottomOf="@id/login"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:drawableStart="@drawable/ic_email"/>

                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/password"
                    android:layout_height="?actionBarSize"
                    android:hint="@string/password"
                    android:textColorHint="@color/hint"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:drawablePadding="10dp"
                    app:layout_constraintTop_toBottomOf="@id/email"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:drawableStart="@drawable/ic_lock"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:id="@+id/forgot_password"
                    android:layout_marginTop="5dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/teesGreen"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toBottomOf="@id/password"
                    app:layout_constraintEnd_toEndOf="parent"/>


                <androidx.cardview.widget.CardView
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/custom_ripple"
                    app:cardBackgroundColor="@color/teesGreen"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/forgot_password">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:id="@+id/login_text"
                        android:background="@drawable/custom_ripple"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/login"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:id="@+id/progress_signIn"
                        style="?android:attr/progressBarStyle"
                        app:visibility="gone"
                        android:indeterminateTintMode="src_atop"
                        android:indeterminateTint="@color/white" />

                </androidx.cardview.widget.CardView>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create_account"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teesGreen"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/create_account"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_button"
                    app:layout_constraintVertical_bias="1.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>