<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".main.presentation.DashboardFragment">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:id="@+id/hello"
                    android:layout_margin="35dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/hint"
                    android:textSize="20sp"
                    android:textStyle="normal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/user_name"
                    android:layout_height="wrap_content"
                    android:text="@string/georgina"
                    app:layout_constraintStart_toStartOf="@id/hello"
                    app:layout_constraintTop_toBottomOf="@id/hello"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"/>


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image_logo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="35dp"
                    android:clickable="true"
                    app:civ_border_color="@color/hint"
                    app:civ_border_width="1dp"
                    android:focusable="true"
                    android:src="@drawable/ic_person"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />

                <com.mancj.materialsearchbar.MaterialSearchBar
                    android:id="@+id/search_bar"
                    style="@style/MaterialSearchBarLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="25dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_name"
                    android:layout_marginEnd="35dp"
                    app:mt_hint="Search Subjects"
                    app:mt_hintColor="@color/ripple"
                    app:mt_maxSuggestionsCount="10"
                    app:mt_roundedSearchBarEnabled="true"
                    app:mt_searchIconDrawable="@drawable/ic_search"
                    app:mt_backIconDrawable="@drawable/ic_search"
                    app:mt_placeholder="Search subjects"
                    app:mt_placeholderColor="@color/ripple"
                    android:shadowColor="@color/ripple"
                    app:mt_searchIconTint="@color/ripple" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/see_all"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="8dp"
                    android:textAllCaps="false"
                    android:background="@drawable/custom_ripple"
                    android:text="@string/see_all"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    app:icon="@drawable/ic_arrow"
                    app:iconGravity="end"
                    app:iconTint="@color/black"
                    app:layout_constraintEnd_toEndOf="@id/search_bar"
                    app:layout_constraintTop_toBottomOf="@+id/search_bar" />
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:columnCount="2"
                    android:rowCount="2"
                    android:background="@color/black"
                    android:backgroundTint="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/see_all"
                    app:layout_constraintTop_toBottomOf="@id/see_all">



                </GridLayout>




            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>